--- a/front_end_pc/login.html
+++ b/front_end_pc/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>	
+		<a href="index_origin.html" class="login_logo"><img src="images/logo02.png"></a>
 	</div>
 	<div class="login_form_bg">
 		<div class="login_form_wrap clearfix">
